--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,31 @@
-aiohttp
-loguru
-aiofiles
-pydantic
-hashlib
-asyncio
-tempfile
-os
+aiofiles==24.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+astroid==3.2.3
+async-timeout==4.0.3
+asyncio==3.4.3
+attrs==23.2.0
+dill==0.3.8
+exceptiongroup==1.2.2
+frozenlist==1.4.1
+idna==3.7
+iniconfig==2.0.0
+isort==5.13.2
+loguru==0.7.2
+mccabe==0.7.0
+multidict==6.0.5
+packaging==24.1
+platformdirs==4.2.2
+pluggy==1.5.0
+pydantic==2.8.2
+pydantic-settings==2.3.4
+pydantic_core==2.20.1
+pylint==3.2.5
+pytest==8.2.2
+pytest-asyncio==0.23.8
+python-dotenv==1.0.1
+tomli==2.0.1
+tomlkit==0.13.0
+typing_extensions==4.12.2
+yarl==1.9.4
